fixed text clipping

--- a/marketplace/src/VendorSide/css/style.css
+++ b/marketplace/src/VendorSide/css/style.css
@@ -88,6 +88,7 @@
     color: #000000;
     margin-left: 20px;
     text-overflow: ellipsis;
+    text-wrap:balance;
 }
 
 .carouselven {
